--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Cloud Backup Api System for risevest",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsnd --respawn index.ts",
+    "build": "rm -rf dist && ttsc && cp -R ./src/db/migrations ./dist/db",
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,33 @@
   },
   "homepage": "https://github.com/kendrickchibueze/Backup-RestApi#readme",
   "dependencies": {
-    "express": "^4.17.2"
+    "@types/pg": "^7.14.11",
+    "@uniswap/sdk": "^3.0.2",
+    "aws-sdk": "^2.1076.0",
+    "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "multer": "^1.4.4",
+    "node-postgres": "^0.6.2",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "postgres-migrations": "^5.3.0",
+    "sequelize": "^6.16.1",
+    "sequelize-file": "^0.3.0",
+    "sharp": "^0.30.1",
+    "tslib": "^1.14.1",
+    "typescript-transform-paths": "^3.3.1",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.17",
+    "nodemon": "^2.0.15",
+    "sequelize-cli": "^6.4.1",
+    "ts-node": "^10.5.0",
+    "ts-node-dev": "^1.1.8",
+    "ttypescript": "^1.5.13",
+    "typescript": "4.2"
   }
 }
